# chatbot

./: .gitignore  README.md  config.example.yaml  makefile  pyproject.toml  test.py
chatbot/: app.py  bot.py  embeddings.py  index.py  utils.py
data/: .gitkeep
data/yaml/: ANEXO 1-A TALLER LIGERO 1.yaml  ANEXO TALLER LIGERO 1.yaml  ANEXO TALLER LIGERO 3.yaml  ANEXO TALLER PESADO 2.yaml  Anexo 4 Listado unidades por Complejo y Municipio.yaml  CIMEX ORGANIZACIÓN.yaml  Centros de Servicios Técnicos Territoriales.yaml  DEFINICIONES.yaml  IA Información comercial.yaml  RED tiendas USD CIMEX.yaml  Tablilla Garantia Año 2025.yaml  Tarjetas Cl Inteligencia Artificial.yaml  Unidades comerciales por Provincias y Municipios.yaml  tienda virtual cimex.yaml
src/: app.py  bot.py
